--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Lab3-MueblesDeLosAlpes-ejb/nbproject/private/
+/nbproject/private/
+/Lab3-MueblesDeLosAlpes-war/nbproject/private/
+/Lab3-MueblesDeLosAlpes-ejb/build/
+/Lab3-MueblesDeLosAlpes-ejb/dist/
+/Lab3-MueblesDeLosAlpes-war/build/
+/Lab3-MueblesDeLosAlpes-war/dist/
+/build/
+/dist/
